--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,22 +1,28 @@
 @charset 'UTF-8';
 
 // 1. Configuration and helpers
-@import "abstracts/variables", "abstracts/functions", "abstracts/mixins";
+@import 'abstracts/variables';
+@import 'abstracts/functions';
+@import 'abstracts/mixins';
 
 // 2. Vendors
 // @import "vendors/...";
 
 // 3. Base stuff
-@import "base/base", "base/fonts", "base/typography", "base/helpers";
+@import 'base/base';
+@import 'base/fonts';
+@import 'base/typography';
+@import 'base/helpers';
 
 // 4. Layout-related sections
-@import "layout/header", "layout/footer";
+@import 'layout/header';
+@import 'layout/footer';
 
 // 5. Components
-@import "components/button";
+@import 'components/button';
 
 // 6. Page-specific styles
-@import "pages/home";
+@import 'pages/home';
 
 // 7. Themes
-@import "themes/default";
+@import 'themes/default';
