--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,6 +5,7 @@
 
 // Стили для файла с примером HTML-фрагмента
 @import './example';
-@import './_title';
+@import './title';
 @import './karaulnyi';
 @import './kolotilin';
+@import './_nelli';
