--- a/src/sass/_nelli.scss
+++ b/src/sass/_nelli.scss
@@ -1,12 +1,20 @@
-.box{
-    border: 1px solid pink;
-    background-color: aqua;
+.box {
+  text-align: center;
+  border: 5px solid rgb(197, 143, 161);
+  background-color: rgb(223, 203, 219);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
 }
 
-.box__name{
-    color: pink;    
+.box__name {
+  font-size: 36px;
+  font-weight: 700;
+  color: rgb(190, 90, 199);
 }
 
-.box__comment{
-    color:blueviolet;
+.box__comment {
+  font-size: 24px;
+  font-weight: 700;
+  color: blueviolet;
 }
