--- a/src/partials/nelli.html
+++ b/src/partials/nelli.html
@@ -1,4 +1,5 @@
 <div class="box">
     <h2 class="box__name">Nelli says:</h2>
     <p class="box__comment">"I'm a good developer"</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste sequi eum cum quae sunt aperiam magni nemo est. Est praesentium, molestias soluta similique excepturi placeat facilis aut pariatur accusantium! Consequuntur?тзь</p>
 </div>
