section-hero-header

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,2 +1,14 @@
 .header{
+
+}
+.site-nav__list{
+    text-align: center;
+}
+.site-nav__link{
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 16px;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    color: var(--prymary-color);
 }
