--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,10 +1,13 @@
-@import '../sass/utils/variables';
-@import '../sass/utils/general';
-@import '../sass/components/header';
-@import '../sass/components/section-hero';
-@import '../sass/components/section-about';
-@import '../sass/components/section-features';
-@import '../sass/components/section-requirement';
-@import '../sass/components/section-qoutes';
-@import '../sass/components/section-newsletter';
-@import '../sass/components/footer';
+@import './utils/variables';
+@import './utils/general';
+@import './components/logo';
+@import './components/btn';
+@import './components/header';
+
+@import './components/section-hero-header';
+@import './components/section-about';
+@import './components/section-features';
+@import './components/section-requirement';
+@import './components/section-qoutes';
+@import './components/section-newsletter';
+@import './components/footer';
