--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,22 +5,4 @@
 
 // Стили для файла с примером HTML-фрагмента
 @import './example';
-@font-face {
-    font-family: "DMSans-Bold";
-    src: url(../fonts/DM_Sans/DMSans-Bold.ttf);
-}
-
-@font-face {
-    font-family: "DMSans-Medium";
-    src: url(../fonts/DM_Sans/DMSans-Medium.ttf);
-}
-
-@font-face {
-    font-family: "DMSans-Regular";
-    src: url(../fonts/DM_Sans/DMSans-Regular.ttf);
-}
-
-@font-face {
-    font-family: "TitanOne-Regular";
-    src: url(../fonts/Titan_One/TitanOne-Regular.ttf);
-}
+@import './fonts.css';
