Внес правки в названия переменных

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,18 +1,18 @@
 $primary-text-color: #FFFFFF;
-$secondary-main-text-color: #000000;
-$main-text-color: #907E82;
+$secondary-text-color: #000000;
+$third-text-color: #907E82;
 
-$primary-accent-text-color: #D41443;
-$secondary-accent-text-color: #FFA5BA;
+$primary-accent-color: #D41443;
+$secondary-accent-color: #FFA5BA;
 
 $primary-body-color: #FFFFFF;
 $secondary-body-color: #FFF5F6;
 
-$first-background-color: #FFB8CA;
-$second-background-color: #F0D1A5;
-$third-background-color: #C2E297;
-$comments-background-color: #FAFAFA;
-$side-menu-background-color: #E17992;
+$first-bg-color: #FFB8CA;
+$second-bg-color: #F0D1A5;
+$third-bg-color: #C2E297;
+$comments-bg-color: #FAFAFA;
+$side-menu-bg-color: #E17992;
 
 
 
@@ -28,7 +28,7 @@ $side-menu-background-color: #E17992;
 
 // ________________________________________________________
 
-// $secondary-main-text-color: #000000; - используется:
+// $secondary-text-color: #000000; - используется:
 // - первий параграф в секции About;
 // - параграфи в секции Advantages;
 // - текст в секции Customer Reviews;
@@ -37,14 +37,14 @@ $side-menu-background-color: #E17992;
 
 // ________________________________________________________
 
-// $main-text-color: #907E82; - используется: 
+// $third-text-color: #907E82; - используется: 
 // - второй параграф секции About;
 // - параграфи и контакти карточек секции Contacts;
 // - копирайт.
 
 // ________________________________________________________
 
-// $primary-accent-text-color: #D41443; - используется:
+// $primary-accent-color: #D41443; - используется:
 // - hover focus в меню header;
 // - часть hero title;
 // - hover focus кнопок;
@@ -56,7 +56,7 @@ $side-menu-background-color: #E17992;
 
 // ________________________________________________________
 
-// $secondary-accent-text-color: #FFA5BA; - используется:
+// $secondary-accent-color: #FFA5BA; - используется:
 // - часть title в секции Products;
 // - backround карточки в секции Products;
 // - часть title в секции About;
@@ -80,30 +80,30 @@ $side-menu-background-color: #E17992;
 
 // ________________________________________________________
 
-// $first-background-color: #FFB8CA; - используется:
+// $first-bg-color: #FFB8CA; - используется:
 // - background секции Hero;
 // - background карточки в секции Products.
 
 // _______________________________________________________
 
-// $second-background-color: #F0D1A5; - используется:
+// $second-bg-color: #F0D1A5; - используется:
 // - background карточки в секции Products.
 // - background title карточки в секции Contacts.
 
 // _______________________________________________________
 
-// $third-background-color: #C2E297; - используется:
+// $third-bg-color: #C2E297; - используется:
 // - background карточки в секции Products;
 // - background title карточки в секции Contacts.
 
 // ______________________________________________________
 
-// $comments-background-color: #FAFAFA; - используется: 
+// $comments-bg-color: #FAFAFA; - используется: 
 // - background коментариев в секции Customer Reviews.
 
 // ______________________________________________________
 
-// $side-menu-background-color: #E17992; - используется:
+// $side-menu-bg-color: #E17992; - используется:
 // - background для меню навигации на мобилке и планшете.
 
 
