основные стили Products (нужны правки)

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,12 +1,11 @@
 
 <section class="section products">
   <div class="container">
-  <div class="container">
     <p class="products__label">100% natural</p>
     <h2 class="products__title">products</h2>
-    <ul class="porducts__list">
+    <ul class="porducts__list list">
       <li class="products__item">
-        <h3>ice cream</h3>
+        <h3 class="product__name">ice cream</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
           ut labore et. dolore magna aliqua facilisis.
@@ -18,7 +17,7 @@
         </button>
       </li>
       <li class="products__item">
-        <h3>ice coffee</h3>
+        <h3 class="product__name">ice coffee</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
           ut labore et. dolore magna aliqua facilisis.
@@ -30,7 +29,7 @@
         </button>
       </li>
       <li class="products__item">
-        <h3>milkshakes</h3>
+        <h3 class="product__name">milkshakes</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
           ut labore et. dolore magna aliqua facilisis.
