--- a/src/sass/layouts/_products.scss
+++ b/src/sass/layouts/_products.scss
@@ -6,14 +6,14 @@
   text-transform: uppercase;
 }
 
-.product__label {
+.products__label {
   font-size: 18px;
   line-height: 1.17;
   color: #ffa5ba;
   margin-bottom: 15px;
 }
 
-.product__title {
+.products__title {
   font-weight: 400;
   font-size: 34px;
   line-height: 1.147;
@@ -33,20 +33,20 @@
   margin-top: 16px;
 }
 
-.product__name {
+.products__name {
   font-size: 20px;
   line-height: 1.15;
   color: #ffffff;
 }
 
-.product__name::before {
+.products__name::before {
   content: '';
   background-image: url();
   width: 249px;
   height: 252px;
 }
 
-.product__name::after {
+.products__name::after {
   content: '';
   width: 6px;
   height: 6px;
