--- a/src/sass/layouts/_products.scss
+++ b/src/sass/layouts/_products.scss
@@ -4,60 +4,97 @@
   text-align: center;
   letter-spacing: 0.04em;
   text-transform: uppercase;
-}
 
-.products__label {
-  font-size: 18px;
-  line-height: 1.17;
-  color: #ffa5ba;
-  margin-bottom: 15px;
-}
+  &__label {
+    font-size: 18px;
+    line-height: 1.17;
+    color: $secondary-accent-color;
 
-.products__title {
-  font-weight: 400;
-  font-size: 34px;
-  line-height: 1.147;
-  color: #d41443;
+    margin: 0;
+    padding: 0;
 
-  margin-bottom: 31px;
-}
+    margin-bottom: 15px;
+  }
 
-.products__item {
-  width: 280px;
-  height: 485px;
-  background: #ffb8ca;
-  border-radius: 24px;
-}
+  &__title {
+    font-weight: 400;
+    font-size: 34px;
+    line-height: 1.147;
+    color: $primary-accent-color;
 
-.products__item:not(:first-child) {
-  margin-top: 16px;
-}
+    margin: 0;
+    padding: 0;
 
-.products__name {
-  font-size: 20px;
-  line-height: 1.15;
-  color: #ffffff;
-}
+    margin-bottom: 31px;
+  }
 
-.products__name::before {
-  content: '';
-  background-image: url();
-  width: 249px;
-  height: 252px;
-}
+  &__list {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+  }
 
-.products__name::after {
-  content: '';
-  width: 6px;
-  height: 6px;
+  &__item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    width: 280px;
+    height: 485px;
+    background: $secondary-accent-color;
+    border-radius: 24px;
 
-  background: #ffffff;
-}
+    padding:40px;
+  }
 
-.porducts__list {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  flex-wrap: wrap;
-  align-items: center;
+  &__item:not(:first-child) {
+    margin-top: 16px;
+  }
+
+  &__name {
+    font-size: 20px;
+    line-height: 1.15;
+    color: $primary-body-color;
+
+    margin: 0;
+
+    margin-bottom: 66px;
+  }
+
+  &__name::before {
+    content: '';
+    background-image: url();
+    width: 249px;
+    height: 252px;
+  }
+
+  &__name::after {
+    content: '';
+    width: 6px;
+    height: 6px;
+
+    background: $primary-body-color;
+  }
+
+  &__text {
+    margin: 0;
+    padding: 0;
+
+    margin-bottom: 30px;
+  }
+
+  &__btn {
+    border-style: none;
+    border-radius: 50%;
+    border-color: $primary-text-color;
+    padding: 0;
+    margin: 0;
+  }
+
+  &__icon-btn {
+    display: block;
+    // fill: var(--main-cl);
+  }
 }
