--- a/src/partials/customer_reviews.html
+++ b/src/partials/customer_reviews.html
@@ -1,8 +1,13 @@
-<section class="reviews section">
-  <div class="container wrapper">
-    <div class="reviews__item">
+    <section class="section ">
+    <div class="conteiner wrapper">
+	<input type="radio" name="point" id="slide1" checked>
+	<input type="radio" name="point" id="slide2">
+	<input type="radio" name="point" id="slide3">
+	
+	<div class="slider">
+		<div class="slides slide1"><div class="reviews__item">
       <div class="reviews__foto">
-        <img src="" alt="" class="reviews__img" />
+        <img src="./images/customer-reviews/customer-1.png" alt="" class="reviews__img" />
       </div>
       <div class="reviews__content">
         <p class="reviews__text">
@@ -10,30 +15,56 @@
           nulla quam nunc, accumsan congue. Lorem ipsum primis in n ibh vel risus.
         </p>
 
-        <div class="reviews__decor-dot-box">
-          <span class="reviews__decor-dot"></span>
-          <span class="reviews__decor-dot"></span>
-          <span class="reviews__decor-dot"></span>
+        <div class="reviews__decor-box">
+          <span class="reviews__decor-point"></span>
+          <span class="reviews__decor-point"></span>
+          <span class="reviews__decor-point"></span>
         </div>
         <p class="reviews__author">Emily, Los Angeles</p>
       </div>
-    </div>
-
-    <div class="slider">
-      <div class="slider__dot slides">
-        <input id="radio-1" type="radio" name="radio" value="1" checked />
-        <label for="radio-1"></label>
+    </div></div>
+		<div class="slides slide2"><div class="reviews__item">
+      <div class="reviews__foto">
+        <img src="./images/customer-reviews/customer2.png" alt=""  />
       </div>
+      <div class="reviews__content">
+        <p class="reviews__text">
+          Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit
+          nulla quam nunc, accumsan congue. Lorem ipsum primis in n ibh vel risus.
+        </p>
 
-      <div class="slider__dot slides">
-        <input id="radio-2" type="radio" name="radio" value="2" />
-        <label for="radio-2"></label>
+        <div class="reviews__decor-box">
+          <span class="reviews__decor-point"></span>
+          <span class="reviews__decor-point"></span>
+          <span class="reviews__decor-point"></span>
+        </div>
+        <p class="reviews__author">Lorens, Chicago</p>
       </div>
+    </div></div>
+		<div class="slides slide3"><div class="reviews__item">
+      <div class="reviews__foto">
+        <img src="./images/customer-reviews/customer3.png" alt=""  />
+      </div>
+      <div class="reviews__content">
+        <p class="reviews__text">
+          Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit
+          nulla quam nunc, accumsan congue. Lorem ipsum primis in n ibh vel risus.
+        </p>
 
-      <div class="slider__dot slides">
-        <input id="radio-3" type="radio" name="radio" value="3" />
-        <label for="radio-3"></label>
+        <div class="reviews__decor-box">
+          <span class="reviews__decor-point"></span>
+          <span class="reviews__decor-point"></span>
+          <span class="reviews__decor-point"></span>
+        </div>
+        <p class="reviews__author">Betany, New York</p>
       </div>
-    </div>
-  </div>
+    </div></div>
+	</div>
+
+	<div class="controls">
+		<label for="slide1" class="controls__lable"></label>
+		<label for="slide2" class="controls__lable"></label>
+		<label for="slide3" class="controls__lable"></label>
+	</div>
 </section>
+
