--- a/src/partials/customer_reviews.html
+++ b/src/partials/customer_reviews.html
@@ -1,4 +1,6 @@
-    <section class="section ">
+    <!-- Customer_Reviews -->
+    
+    <section class="section">
     <div class="conteiner wrapper">
 	<input type="radio" name="point" id="slide1" checked>
 	<input type="radio" name="point" id="slide2">
