--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -12,7 +12,7 @@
         </p>
         <button class="products__btn" type="button">
           <svg class="products__icon-btn" width="40px" height="40px">
-            <!-- <use href="../images/sprite.svg#icon-arrow"></use> -->
+            <use href="./images/sprite.svg#icon-arrow"></use>
           </svg>
         </button>
       </li>
@@ -24,7 +24,7 @@
         </p>
         <button class="products__btn" type="button">
           <svg class="products__icon-btn" width="40px" height="40px">
-            <!-- <use href="../images/sprite.svg#icon-arrow"></use> -->
+            <use href="./images/sprite.svg#icon-arrow"></use>
           </svg>
         </button>
       </li>
@@ -36,7 +36,7 @@
         </p>
         <button class="products__btn" type="button">
           <svg class="products__icon-btn" width="40px" height="40px">
-            <!-- <use href="../images/sprite.svg#icon-arrow"></use> -->
+            <use href="./images/sprite.svg#icon-arrow"></use>
           </svg>
         </button>
       </li>
