--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,1 +1,44 @@
-<section class="section"><div class="container">footer</div></section>
+<section class="footer section">
+    <div>
+        <div class="container">
+            <div class="footer__title">
+                <p class="footer__first-title">homemade ice cream made</p>
+                <p class="footer__second-title">with passion</p>
+            </div>
+            <div>
+                <ul class="footer__list">
+                    <li class="footer__list-item list">
+                        <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+                            <svg width="32" height="32">
+                                <use href="./images/sprite.svg#icon-github"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer__list-item list">
+                        <a href="https://telegram.org/" target="_blank" rel="noopener noreferrer">
+                            <svg width="32" height="32">
+                                <use href="./images/sprite.svg#icon-telegram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer__list-item list">
+                        <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+                            <svg width="32" height="32">
+                                <use href="./images/sprite.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            <p class="footer__contact">Feel free to contact <a href="tel:+610383766284"> +61 (0) 383 766 284</a></p>
+            </div>
+        </div>
+    </div>
+    <div>
+        <div class="container">
+            <div>
+                <p>© 2019 - IceCream. All Rights Reserved.</p>
+            </div>
+        </div>
+    </div>
+
+</section>
