Добавление стилей для кнопок

--- a/src/sass/utils/_utils-classes.scss
+++ b/src/sass/utils/_utils-classes.scss
@@ -43,3 +43,65 @@
     padding-right: 115px;
   }
 }
+
+// Классы для кнопок
+.btn {
+  padding: 15px 25px;
+  border: none;
+
+  border-radius: 50px;
+  background-color: $primary-accent-color;
+  line-height: 1.29;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+.btn--invert {
+  background-color: #ffffff;
+  color: $primary-accent-color;
+}
+
+.btn--arrow {
+  padding: 15px 27px;
+
+  &::after {
+    content: '';
+    display: inline-flex;
+    width: 7px;
+    height: 10px;
+    margin-left: 14px;
+
+    background-image: url(../images/arrow-btn.svg);
+    background-size: cover;
+  }
+}
+
+.btn--arrow-invert {
+  padding: 15px 27px;
+  background-color: #ffffff;
+  color: $primary-accent-color;
+
+  &::after {
+    content: '';
+    display: inline-flex;
+    width: 7px;
+    height: 10px;
+    margin-left: 14px;
+
+    background-image: url(../images/arrow-btn-invert.svg);
+    background-size: cover;
+  }
+}
+
+// Кнопка без текста со стрелочкой
+.btn-more {
+  width: 26px;
+  height: 26px;
+  padding: 0;
+
+  background-color: #ffffff;
+  background-image: url(../images/btn-more.svg);
+  background-position: center;
+  background-size: 9px;
+  background-repeat: no-repeat;
+}
