Добавление ховера на кнопки

--- a/src/sass/utils/_utils-classes.scss
+++ b/src/sass/utils/_utils-classes.scss
@@ -44,7 +44,7 @@
   }
 }
 
-// Классы для кнопок
+// Стили для кнопок
 .btn {
   padding: 15px 25px;
   border: none;
@@ -54,11 +54,25 @@
   line-height: 1.29;
   color: #ffffff;
   cursor: pointer;
+
+  transition: background-color $transition-style, box-shadow $transition-style;
+
+  &:hover,
+  &:focus {
+    background-color: $secondary-accent-color;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
+  }
 }
 
 .btn--invert {
   background-color: #ffffff;
   color: $primary-accent-color;
+
+  &:hover,
+  &:focus {
+    background-color: #ecebeb;
+  }
 }
 
 .btn--arrow {
@@ -91,17 +105,27 @@
     background-image: url(../images/arrow-btn-invert.svg);
     background-size: cover;
   }
+
+  &:hover,
+  &:focus {
+    background-color: #ecebeb;
+  }
 }
 
 // Кнопка без текста со стрелочкой
 .btn-more {
-  width: 26px;
-  height: 26px;
+  width: 40px;
+  height: 40px;
   padding: 0;
 
   background-color: #ffffff;
   background-image: url(../images/btn-more.svg);
   background-position: center;
-  background-size: 9px;
+  background-size: 12px;
   background-repeat: no-repeat;
+
+  &:hover,
+  &:focus {
+    background-color: #ecebeb;
+  }
 }
