--- a/src/sass/components/_customer_reviews.scss
+++ b/src/sass/components/_customer_reviews.scss
@@ -3,6 +3,22 @@
   text-align: center;
   position: relative;
   height: 350px;
+
+  @media screen and (min-width: 60px) and (max-width: 479.9px) {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  @media screen and (min-width: 480px) and (max-width: 767.9px) {
+    padding-left: 57px;
+    padding-right: 57px;
+    height: 480px;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1199.9px) {
+    padding-left: 74px;
+    padding-right: 74px;
+  }
 }
 
 .reviews__foto {
@@ -25,7 +41,7 @@
   letter-spacing: 0.04em;
 
   background-color: #fafafa;
-  padding: 54px 98px 30px;
+  padding: 47px 87px 39px 87px;
   margin-bottom: 15px;
   position: relative;
   z-index: 1;
@@ -41,8 +57,38 @@
     background-image: url(../images/blockquote.png);
     position: absolute;
     z-index: -1;
-    top: 40px;
-    left: 60px;
+    top: 32px;
+    left: 45px;
+
+    @media screen and (min-width: 60px) and (max-width: 479.9px) {
+      left: 1px;
+      top: 32px;
+    }
+
+    @media screen and (min-width: 480px) and (max-width: 767.9px) {
+      left: 35px;
+      top: 32px;
+    }
+
+    @media screen and (min-width: 768px) and (max-width: 1199.9px) {
+      left: 42px;
+      top: 32px;
+    }
+  }
+
+  @media screen and (min-width: 60px) and (max-width: 479.9px) {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  @media screen and (min-width: 480px) and (max-width: 767.9px) {
+    padding-left: 57px;
+    padding-right: 57px;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1199.9px) {
+    padding-left: 74px;
+    padding-right: 74px;
   }
 }
 
@@ -71,6 +117,24 @@
   height: inherit;
   overflow: hidden;
   position: relative;
+
+  @media screen and (min-width: 60px) and (max-width: 479.9px) {
+    padding-left: 57px;
+    padding-right: 57px;
+    height: 450px;
+  }
+
+  @media screen and (min-width: 480px) and (max-width: 767.9px) {
+    padding-left: 57px;
+    padding-right: 57px;
+    max-height: 450px;
+  }
+
+  @media screen and (min-width: 550px) and (max-width: 767.9px) {
+    padding-left: 57px;
+    padding-right: 57px;
+    max-height: 400px;
+  }
 }
 
 .slides {
