Спозиционирована кнопка меню, добавлен скрипт работы меню

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,20 +1,23 @@
 <section class="section">
-    <div class="container">
+    <div class="header">
         <img src="./images/logo.png" alt="логотип">
-        <nav>
-            <ul>
-                <li><a href=""></a>Home</li>
-                <li><a href="">About us</a></li>
-                <li><a href="">How it’s made?</a></li>
-                <li><a href="">Our products</a></li>
-                <li><a href="">Contact</a></li>
-            </ul>
-        </nav>
-        <button type="button"></button>
-        <svg>
-            <use href="./images/sprite.svg#icon-menu" width="20" heigth="12"></use>
-            <use href="./images/sprite.svg#icon-close" width="12" heigth="12"></use>
-        </svg>
-        
+        <div class="menu-container" id="menu-container" data-menu>
+            <nav>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About us</a></li>
+                    <li><a href="">How it’s made?</a></li>
+                    <li><a href="">Our products</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+            </nav>
+            <button type="button" class="btn btn--arrow-invert">Buy now</button>
+        </div>
+        <button type="button" class="menu-button is-open" data-menu-button>
+            <svg class="" width="20" height="12" aria-label="Переключатель мобильного меню">
+                <use href="./images/sprite.svg#icon-menu" class="icon-menu"></use>
+                <use href="./images/sprite.svg#icon-close" class="icon-close"></use>
+            </svg>
+        </button>
     </div>
 </section>
