Добавляет фикс и фото для ретины

--- a/src/sass/components/_customer_reviews.scss
+++ b/src/sass/components/_customer_reviews.scss
@@ -2,7 +2,7 @@
   padding: 0 176px;
   text-align: center;
   position: relative;
-  height: 350px;
+  height: 250px;
 
   @media screen and (min-width: 60px) and (max-width: 479.9px) {
     padding-left: 15px;
@@ -12,18 +12,31 @@
   @media screen and (min-width: 480px) and (max-width: 767.9px) {
     padding-left: 57px;
     padding-right: 57px;
-    height: 480px;
+    height: 350px;
   }
 
   @media screen and (min-width: 768px) and (max-width: 1199.9px) {
     padding-left: 74px;
     padding-right: 74px;
+    height: 300px;
   }
 }
 
 .reviews__foto {
   display: flex;
   justify-content: center;
+  margin-bottom: 62px;
+
+  @media screen and (min-width: 60px) and (max-width: 479.9px) {
+    margin-bottom: 72px;
+  }
+
+  @media screen and (min-width: 480px) and (max-width: 767.9px) {
+    margin-bottom: 66px;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1199.9px) {
+  }
 }
 
 .reviews__text,
@@ -31,7 +44,7 @@
   font-family: DM Sans;
   font-weight: 500;
   font-size: 20px;
-  line-height: 1.86;
+  line-height: 20px;
   text-align: center;
   margin: 0;
 }
@@ -41,13 +54,12 @@
   letter-spacing: 0.04em;
 
   background-color: #fafafa;
-  padding: 47px 87px 39px 87px;
+  padding: 0 87px 0 87px;
   margin-bottom: 15px;
   position: relative;
   z-index: 1;
-  text-decoration: underline;
-  text-underline-position: under;
-  text-decoration-color: #e1e1e1;
+
+  background-image: repeating-linear-gradient(180deg, transparent, transparent 16px, #e1e1e1 20px);
 
   &::before {
     content: '';
@@ -57,33 +69,35 @@
     background-image: url(../images/blockquote.png);
     position: absolute;
     z-index: -1;
-    top: 32px;
-    left: 45px;
+    top: -20px;
+    left: 42px;
 
     @media screen and (min-width: 60px) and (max-width: 479.9px) {
       left: 1px;
-      top: 32px;
+      top: -20px;
     }
 
     @media screen and (min-width: 480px) and (max-width: 767.9px) {
       left: 35px;
-      top: 32px;
+      top: -20px;
     }
 
     @media screen and (min-width: 768px) and (max-width: 1199.9px) {
+      top: -20px;
       left: 42px;
-      top: 32px;
     }
   }
 
   @media screen and (min-width: 60px) and (max-width: 479.9px) {
     padding-left: 15px;
     padding-right: 15px;
+    margin-bottom: 30px;
   }
 
   @media screen and (min-width: 480px) and (max-width: 767.9px) {
     padding-left: 57px;
     padding-right: 57px;
+    margin-bottom: 24px;
   }
 
   @media screen and (min-width: 768px) and (max-width: 1199.9px) {
@@ -96,12 +110,20 @@
   display: flex;
   justify-content: center;
   margin-bottom: 15px;
+
+  @media screen and (min-width: 60px) and (max-width: 479.9px) {
+    margin-bottom: 18px;
+  }
+
+  @media screen and (min-width: 480px) and (max-width: 767.9px) {
+    margin-bottom: 15px;
+  }
 }
 
 .reviews__decor-point {
   width: 4px;
   height: 4px;
-  background-color: red;
+  background-color: #c7133e;
   border-radius: 50%;
 
   &:not(:last-child) {
@@ -121,19 +143,24 @@
   @media screen and (min-width: 60px) and (max-width: 479.9px) {
     padding-left: 57px;
     padding-right: 57px;
-    height: 450px;
+    height: 350px;
   }
 
   @media screen and (min-width: 480px) and (max-width: 767.9px) {
     padding-left: 57px;
     padding-right: 57px;
-    max-height: 450px;
+    height: 350px;
   }
 
   @media screen and (min-width: 550px) and (max-width: 767.9px) {
     padding-left: 57px;
     padding-right: 57px;
-    max-height: 400px;
+    height: 300px;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1199.9px) {
+    padding-left: 57px;
+    padding-right: 57px;
+    height: 300px;
   }
 }
 
@@ -158,6 +185,7 @@
   display: none;
 }
 .controls {
+  margin-top: 35px;
 }
 
 .controls__lable {
