--- a/src/partials/customer_reviews.html
+++ b/src/partials/customer_reviews.html
@@ -10,7 +10,16 @@
       <div class="slides slide1">
         <div class="reviews__item">
           <div class="reviews__foto">
-            <img src="./images/customer-reviews/customer-1.png" alt="" class="reviews__img" />
+            <picture>
+              <source
+                srcset="
+                  ./images/customer-reviews/customer-1.png 1x,
+                  ./images/customer-reviews/customer1@2x.png 2x
+                "
+                media="(min-width:1200px)"
+              />
+              <img src="./images/customer-reviews/customer-1.png" alt="Emily" />
+            </picture>
           </div>
           <div class="reviews__content">
             <p class="reviews__text">
@@ -30,7 +39,15 @@
       <div class="slides slide2">
         <div class="reviews__item">
           <div class="reviews__foto">
-            <img src="./images/customer-reviews/customer2.png" alt="" />
+             <source
+                srcset="
+                  ./images/customer-reviews/customer2.png 1x,
+                  ./images/customer-reviews/customer2@2x.png 2x
+                "
+                media="(min-width:1200px)"
+              />
+              <img src="./images/customer-reviews/customer2.png" alt="Lorens" />
+            </picture>
           </div>
           <div class="reviews__content">
             <p class="reviews__text">
@@ -50,7 +67,16 @@
       <div class="slides slide3">
         <div class="reviews__item">
           <div class="reviews__foto">
-            <img src="./images/customer-reviews/customer3.png" alt="" />
+             <source
+                srcset="
+                  ./images/customer-reviews/customer3.png 1x,
+                  ./images/customer-reviews/customer3@2x.png 2x
+                "
+                media="(min-width:1200px)"
+              />
+              <img src="./images/customer-reviews/customer3.png" alt="Betany" />
+              <img src="" alt="">
+            </picture>
           </div>
           <div class="reviews__content">
             <p class="reviews__text">
