--- a/src/partials/hero_header.html
+++ b/src/partials/hero_header.html
@@ -1,1 +1,48 @@
-<section class="section"><div class="container">hero_header</div></section>
+<section class="section hero">
+  <div class="container container__hero">
+    <div class="hero__wrap">
+      <h1 class="hero__title">
+        ice cream <br />
+        made with <br />
+        <span class="hero__title-accent">passion</span>
+      </h1>
+      <a href="#" class="btn hero__btn">Products</a>
+      <a href="#" class="btn btn--invert hero__btn">How it’s made?</a>
+    </div>
+    <picture class="hero__image">
+      <source
+        media="(min-width: 1200px)"
+        srcset="
+          ./images/hero-header/desktop/ice-cream-desktop.png    1x,
+          ./images/hero-header/desktop/ice-cream-desktop@2x.png 2x
+        "
+      />
+      <source
+        media="(min-width: 768px)"
+        srcset="
+          ./images/hero-header/tablet/ice-cream-tablet.png    1x,
+          ./images/hero-header/tablet/ice-cream-tablet@2x.png 2x
+        "
+      />
+      <source
+        media="(min-width: 320px)"
+        srcset="
+          ./images/hero-header/mobile/ice-cream-mobile.png    1x,
+          ./images/hero-header/mobile/ice-cream-mobile@2x.png 2x
+        "
+      />
+
+      <img src="./images/hero-header/mobile/ice-cream-mobile.png" alt="icecream" />
+    </picture>
+
+    <div class="hero__wrap">
+      <h1 class="hero__title">
+        ice cream <br />
+        made with <br />
+        <span class="hero__title-accent">passion</span>
+      </h1>
+      <a href="#" class="btn hero__btn">Products</a>
+      <a href="#" class="btn btn--invert hero__btn">How it’s made?</a>
+    </div>
+  </div>
+</section>
