--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,6 +5,9 @@
 
 // Стили для файла с примером HTML-фрагмента
 @import './base/base';
+
 @import './utils/vars';
 @import './utils/mixins';
 @import './utils/utils-classes';
+
+@import './layouts/hero';
