--- a/src/partials/customer_reviews.html
+++ b/src/partials/customer_reviews.html
@@ -13,7 +13,7 @@
             <picture>
               <source
                 srcset="
-                  ./images/customer-reviews/customer-1.png 1x,
+                  ./images/customer-reviews/customer-1.png   1x,
                   ./images/customer-reviews/customer1@2x.png 2x
                 "
                 media="(min-width:1200px)"
@@ -39,9 +39,10 @@
       <div class="slides slide2">
         <div class="reviews__item">
           <div class="reviews__foto">
-             <source
+            <picture>
+              <source
                 srcset="
-                  ./images/customer-reviews/customer2.png 1x,
+                  ./images/customer-reviews/customer2.png    1x,
                   ./images/customer-reviews/customer2@2x.png 2x
                 "
                 media="(min-width:1200px)"
@@ -67,15 +68,15 @@
       <div class="slides slide3">
         <div class="reviews__item">
           <div class="reviews__foto">
-             <source
+            <picture>
+              <source
                 srcset="
-                  ./images/customer-reviews/customer3.png 1x,
+                  ./images/customer-reviews/customer3.png    1x,
                   ./images/customer-reviews/customer3@2x.png 2x
                 "
                 media="(min-width:1200px)"
               />
               <img src="./images/customer-reviews/customer3.png" alt="Betany" />
-              <img src="" alt="">
             </picture>
           </div>
           <div class="reviews__content">
