upgrade Products.scss

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -10,11 +10,7 @@
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
           ut labore et. dolore magna aliqua facilisis.
         </p>
-        <button class="products__btn" type="button">
-          <svg class="products__icon-btn" width="40px" height="40px">
-            <use href="./images/sprite.svg#icon-arrow"></use>
-          </svg>
-        </button>
+        <button class="btn btn--more" type="button"></button>
       </li>
       <li class="products__item">
         <h3 class="products__name">ice coffee</h3>
@@ -22,11 +18,7 @@
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
           ut labore et. dolore magna aliqua facilisis.
         </p>
-        <button class="products__btn" type="button">
-          <svg class="products__icon-btn" width="40px" height="40px">
-            <use href="./images/sprite.svg#icon-arrow"></use>
-          </svg>
-        </button>
+        <button class="btn btn--more" type="button"></button>
       </li>
       <li class="products__item">
         <h3 class="products__name">milkshakes</h3>
@@ -34,11 +26,7 @@
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
           ut labore et. dolore magna aliqua facilisis.
         </p>
-        <button class="products__btn" type="button">
-          <svg class="products__icon-btn" width="40px" height="40px">
-            <use href="./images/sprite.svg#icon-arrow"></use>
-          </svg>
-        </button>
+        <button class="btn btn--more" type="button"></button>
       </li>
     </ul>
   </div>
