--- a/src/sass/layouts/_products.scss
+++ b/src/sass/layouts/_products.scss
@@ -1,3 +1,10 @@
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+  outline: 1px solid red;
+}
+
 .products {
   font-family: Titan One;
   font-weight: 400;
@@ -52,19 +59,56 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-end;
-  max-width: 280px;
-  max-height: 485px;
+  width: 280px;
+  height: 485px;
   border-radius: 24px;
   padding: 40px;
 
   @include for-tablet {
-    padding: 161px 11px 11px 40px;
-    margin-top: 150px;
+    padding: 161px 11px 40px 11px;
   }
 
   @include for-desktop {
-    padding: 0px 44px 44px 50px;
-    margin-top: 259px;
+    padding: 0px 44px 50px 44px;
+  }
+
+  &:first-child {
+    margin-top: 17px;
+    background: $first-bg-color;
+
+    @include for-tablet {
+      margin-top: 150px;
+    }
+
+    @include for-desktop {
+      margin-top: 259px;
+    }
+  }
+
+  &:nth-child(2) {
+    margin-top: 130px;
+    background: $second-bg-color;
+
+    @include for-tablet {
+      margin-top: 150px;
+    }
+
+    @include for-desktop {
+      margin-top: 259px;
+    }
+  }
+
+  &:nth-child(3) {
+    margin-top: 130px;
+    background: $third-bg-color;
+
+    @include for-tablet {
+      margin-top: 150px;
+    }
+
+    @include for-desktop {
+      margin-top: 259px;
+    }
   }
 
   &:not(:last-child) {
@@ -76,21 +120,6 @@
       margin-right: 25px;
     }
   }
-
-  &:first-child {
-    margin-top: 144px;
-    background: $first-bg-color;
-  }
-
-  &:nth-child(2) {
-    margin-top: 130px;
-    background: $second-bg-color;
-  }
-
-  &:nth-child(3) {
-    margin-top: 130px;
-    background: $third-bg-color;
-  }
 }
 
 .products__name {
@@ -98,7 +127,6 @@
   line-height: 1.15;
   color: $primary-body-color;
 
-  margin: 0;
 
   &::before {
     display: block;
@@ -107,6 +135,14 @@
     height: 252px;
     background-size: contain;
     margin-bottom: 22px;
+
+    @include for-tablet {
+      margin-bottom: 30px;
+    }
+
+    @include for-desktop {
+      margin-bottom: 38px;
+    }
   }
 
   &::after {
@@ -117,6 +153,10 @@
     background-image: url(/images/dots.svg);
     background-size: cover;
     margin: 30px auto;
+
+    @include for-desktop {
+      margin: 32px auto;
+    }
   }
 }
 
@@ -200,16 +240,7 @@
   margin-bottom: 30px;
 }
 
-.products__btn {
-  border-style: none;
-  border-radius: 50%;
-  border-color: $primary-text-color;
-
-  padding: 0;
-  margin: 0;
-}
-
-.products__icon-btn {
-  display: block;
-  fill: $primary-accent-color;
+.products__item > .btn {
+  min-width: 40px;
+  min-height: 40px;
 }
