продолжаем работу над мобильным меню

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,7 +11,7 @@
                     <li><a href="">Contact</a></li>
                 </ul>
             </nav>
-            <button type="button" class="btn btn--arrow-invert">Buy now</button>
+            <button type="button" class="header-button">Buy now</button>
         </div>
         <button type="button" class="menu-button is-open" data-menu-button>
             <svg class="" width="20" height="12" aria-label="Переключатель мобильного меню">
