--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -43,7 +43,15 @@
   z-index: 2;
 
   &.is-open {
-    display: block;
+    @extend .container;
+    display: flex;
+    flex-direction: column-reverse;
     background-color: $side-menu-bg-color;
   }
+}
+
+.header-button {
+  @extend .btn;
+  @extend .btn--arrow-invert;
+  margin-top: 60px;
 }
