переделываю стилизацию хедера

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,6 @@
-<section class="section">
-    <div class="header">
-        <img src="./images/logo.png" alt="логотип">
+
+<div class="header">
+        <img src="./images/logo.png" alt="логотип" class="logo">
         <div class="menu-container" id="menu-container" data-menu>
             <nav>
                 <ul>
@@ -19,5 +19,5 @@
                 <use href="./images/sprite.svg#icon-close" class="icon-close"></use>
             </svg>
         </button>
-    </div>
-</section>
+</div>
+    
